day-12/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-example
spec:
  containers:
  - name: nginx
    image: nginx:latest
    resources: 
      limits:
        cpu: "101m"
        memory: "128Mi"
      requests:
        cpu: "50m"
        memory: "64Mi"
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
