day-12/root-disable.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: root-disable
spec:
  validationFailureAction: enforce
  rules:
    - name: check-runAsNonRoot
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Root is not allowed"
        pattern:
          spec:
            containers:
              - securityContext:
                  runAsNonRoot: true
